--- a/ExcelBiblT.vcxproj.filters
+++ b/ExcelBiblT.vcxproj.filters
@@ -18,6 +18,9 @@
     <Text Include="debugFile.txt">
       <Filter>Файлы ресурсов</Filter>
     </Text>
+    <Text Include="logFile.txt">
+      <Filter>Файлы ресурсов</Filter>
+    </Text>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
