--- a/ExcelBiblT.vcxproj
+++ b/ExcelBiblT.vcxproj
@@ -166,6 +166,7 @@
     <ClCompile Include="global.cpp" />
     <ClCompile Include="graph.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="metric.cpp" />
     <ClCompile Include="outData.cpp" />
     <ClCompile Include="solve.cpp">
       <AdditionalOptions Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">/utf-8 </AdditionalOptions>
@@ -185,6 +186,7 @@
     <ClInclude Include="formulaParser.h" />
     <ClInclude Include="global.h" />
     <ClInclude Include="graph.h" />
+    <ClInclude Include="metric.h" />
     <ClInclude Include="outData.h" />
     <ClInclude Include="solve.h" />
     <ClInclude Include="solveSecondPage.h" />
