Нахожу мин оставное дерево Сделал обратный перевод с UTF 16, теперь в logFile.txt выводится Кириллица

--- a/ExcelBiblT.vcxproj.filters
+++ b/ExcelBiblT.vcxproj.filters
@@ -99,5 +99,8 @@
     <ClInclude Include="metric.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="dsu.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
