--- a/ExcelBiblT.vcxproj
+++ b/ExcelBiblT.vcxproj
@@ -182,6 +182,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
+    <ClInclude Include="dsu.h" />
     <ClInclude Include="error.h" />
     <ClInclude Include="formulaParser.h" />
     <ClInclude Include="global.h" />
