v 0.9.2 Учёт того, что в УП могут отсутствовать индикаторы

--- a/ExcelBiblT.vcxproj
+++ b/ExcelBiblT.vcxproj
@@ -178,6 +178,7 @@
     <ClCompile Include="solveZeroPage.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <None Include=".clang-format" />
     <None Include="0903010030-21.plm.plx.xlsx" />
   </ItemGroup>
   <ItemGroup>
