v 1.11.5 Теперь у УП с ошибками в указании индексов, индексы определяются по названию дисциплин Актуально для анализа УП 09_04_02_SP_IPTIP_2022 Добавлена визуализация данных в другом виде (E1Diagram)

--- a/ExcelBiblT.vcxproj.filters
+++ b/ExcelBiblT.vcxproj.filters
@@ -65,7 +65,7 @@
     <ClCompile Include="metric.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="FAdapOutData.cpp">
+    <ClCompile Include="adapOutData.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
@@ -111,7 +111,7 @@
     <ClInclude Include="dsu.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="FAdapOutData.h">
+    <ClInclude Include="adapOutData.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
