--- a/ExcelBiblT.vcxproj
+++ b/ExcelBiblT.vcxproj
@@ -176,6 +176,7 @@
     </ClCompile>
     <ClCompile Include="solveFirstPage.cpp" />
     <ClCompile Include="solveSecondPage.cpp" />
+    <ClCompile Include="solveThirdPage.cpp" />
     <ClCompile Include="solveTree.cpp" />
     <ClCompile Include="solveZeroPage.cpp" />
   </ItemGroup>
