--- a/UnitTest/UnitTest.vcxproj
+++ b/UnitTest/UnitTest.vcxproj
@@ -176,8 +176,8 @@
     <ClCompile Include="..\solveFirstPage.cpp" />
     <ClCompile Include="..\solveSecondPage.cpp" />
     <ClCompile Include="..\solveThirdPage.cpp" />
-    <ClCompile Include="..\solveTree.cpp" />
     <ClCompile Include="..\solveZeroPage.cpp" />
+    <ClCompile Include="..\сurricula.cpp" />
     <ClCompile Include="UnitTest.cpp" />
   </ItemGroup>
   <ItemGroup>
