--- a/UnitTest/UnitTest.vcxproj.filters
+++ b/UnitTest/UnitTest.vcxproj.filters
@@ -60,7 +60,7 @@
     <ClCompile Include="..\solveThirdPage.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\solveTree.cpp">
+    <ClCompile Include="..\сurricula.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
