v 1.19.2 Добавлены ещё Модульные тесты. Поправлены небольшие ошибки вывода данных.

--- a/ExcelBiblT.vcxproj
+++ b/ExcelBiblT.vcxproj
@@ -151,7 +151,7 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>R:\acmp\excelbibltest\ExcelBiblT\OpenXLSX;R:\acmp\excelbibltest\ExcelBiblT\OpenXLSX\headers;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>\OpenXLSX\headers;OpenXLSX;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>..\output\Release\OpenXLSX.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
