v 1.31 Добавлен параметр "Требуется ли перевод заголовка таблиц" Немного изменена структура программного кода

--- a/ExcelBiblT.vcxproj
+++ b/ExcelBiblT.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="outData.h" />
     <ClInclude Include="solve.h" />
     <ClInclude Include="solveSecondPage.h" />
+    <ClInclude Include="сurricula.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
